# create-py-project

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  contributing.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
create-py-project/stubs/template-fastapi-starter/: README.md  requirements.txt
create-py-project/stubs/template-vannila/: requirements.txt
create_py_project/: main.py  utils.py
create_py_project/stubs/template-django/: README.md
create_py_project/stubs/template-django/core/: settings.py
create_py_project/stubs/template-drf-and-auth/: requirements.txt
create_py_project/stubs/template-drf-and-auth/accounts/: admin.py  apps.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
create_py_project/stubs/template-drf-and-auth/api/: urls.py
create_py_project/stubs/template-drf-and-auth/core/: settings.py  urls.py  views.py
create_py_project/stubs/template-fastapi-starter/: requirements.txt
create_py_project/stubs/template-fastapi-starter/app/: main.py
create_py_project/stubs/template-ml-and-dl/: README.md  main.py  requirements.txt
create_py_project/stubs/template-ml-and-dl/app/: api.py
create_py_project/stubs/template-ml-and-dl/notebooks/: notebook.ipynb
create_py_project/stubs/template-ml-and-dl/tests/: test_main.py
create_py_project/stubs/template-vannila/: README.md  requirements.txt
create_py_project/stubs/template-vannila/src/: main.py
create_py_project/stubs/template-vannila/tests/: test_main.py
tests/: test_create_py_project.py  test_generate_project.py
(+5 files in other folders)
