[tool.poetry]
name = "create-py-project"
version = "0.1.0"
description = "Great CLI tool to scaffold python projects."
authors = ["BHIMRAJ YADAV <bhimrajyadav977@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
create-py-project = "create_py_project.main:main"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
